Fixed article dates not showing at various widths

--- a/themes/bootstrapped/static/css/style.css
+++ b/themes/bootstrapped/static/css/style.css
@@ -52,6 +52,7 @@ body {
 .post {
     border-left: 1px dashed #E3E3E3;
     margin-bottom: 60px;
+    margin-left: 65px;
     padding-left: 15px;
     position: relative;
 }
@@ -326,7 +327,16 @@ blockquote {
         margin-right: 80px;
     }
 
-     .post-date {
+}
+
+
+@media (max-width: 720px) {
+
+    .post {
+        margin-left: 0;
+    }
+
+    .post-date {
         display: inline-block;
         margin-right: 0;
         padding: 5px 10px;
